syntax = "proto3";

package bytebase.store;

option go_package = "generated-go/store";

enum IdentityProviderType {
  IDENTITY_PROVIDER_TYPE_UNSPECIFIED = 0;
  OAUTH2 = 1;
  OIDC = 2;
  LDAP = 3;
}

message IdentityProviderConfig {
  oneof config {
    OAuth2IdentityProviderConfig oauth2_config = 1;
    OIDCIdentityProviderConfig oidc_config = 2;
    LDAPIdentityProviderConfig ldap_config = 3;
  }
}

// OAuth2IdentityProviderConfig is the structure for OAuth2 identity provider config.
message OAuth2IdentityProviderConfig {
  string auth_url = 1;

  string token_url = 2;

  string user_info_url = 3;

  string client_id = 4;

  string client_secret = 5;

  repeated string scopes = 6;

  FieldMapping field_mapping = 7;

  bool skip_tls_verify = 8;
}

// OIDCIdentityProviderConfig is the structure for OIDC identity provider config.
message OIDCIdentityProviderConfig {
  string issuer = 1;

  string client_id = 2;

  string client_secret = 3;

  FieldMapping field_mapping = 4;

  bool skip_tls_verify = 5;
}

// SecurityProtocol represents the security protocol to be used when connecting
// to the LDAP server.
enum SecurityProtocol {
  Unspecified = 0;
  // SecurityProtocolStartTLS represents the StartTLS security protocol.
  StartTLS = 1;
  // SecurityProtocolLDAPS represents the LDAPS security protocol.
  LDAPS = 2;
}

// LDAPIdentityProviderConfig is the structure for LDAP identity provider config.
message LDAPIdentityProviderConfig {
  string host = 1;

  int64 port = 2;

  string bind_dn = 3;

  string bind_password = 4;

  string base_dn = 5;

  string user_filter = 6;

  SecurityProtocol security_protocol = 7;

  FieldMapping field_mapping = 8;

  bool skip_tls_verify = 9;
}

// FieldMapping saves the field names from user info API of identity provider.
// As we save all raw json string of user info response data into `principal.idp_user_info`,
// we can extract the relevant data based with `FieldMapping`.
//
// e.g. For GitHub authenticated user API, it will return `login`, `name` and `email` in response.
// Then the identifier of FieldMapping will be `login`, display_name will be `name`,
// and email will be `email`.
// reference: https://docs.github.com/en/rest/users/users?apiVersion=2022-11-28#get-the-authenticated-user
message FieldMapping {
  // Identifier is the field name of the unique identifier in 3rd-party idp user info. Required.
  string identifier = 1;

  // DisplayName is the field name of display name in 3rd-party idp user info. Required.
  string display_name = 2;

  // Email is the field name of primary email in 3rd-party idp user info. Required.
  string email = 3;
}

message IdentityProviderUserInfo {
  // Identifier is the value of the unique identifier in 3rd-party idp user info.
  string identifier = 1;

  // DisplayName is the value of display name in 3rd-party idp user info.
  string display_name = 2;

  // Email is the value of primary email in 3rd-party idp user info.
  string email = 3;
}
